--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@ html, body {
 
 html {
     background-color: #f5f5f5;
+}
+
+html, body, table {
     color: #0f103d;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 13px;
@@ -527,4 +530,8 @@ form {
 
 .margin-top {
     margin-top: 10px;
+}
+
+.table {
+    width: 100%;
 }
