--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@ body {
     margin: 8px;
 }
 
+img {
+    border: none;
+}
+
 a, a:visited, a:active, a:hover, a:focus {
     color: #0008ae;
 }
@@ -408,6 +412,7 @@ a.btn {
 }
 
 .form-control {
+    background-color: #ffffff;
     border-radius: 3px;
     border: 1px solid #cccccc;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
