--- a/css/style.css
+++ b/css/style.css
@@ -721,3 +721,7 @@ td.phisical-bordered {
     background-color: #FEEFB3;
     border: 2px solid #0f103d;
 }
+
+input[type="checkbox"] {
+    margin: 0;
+}
