--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,12 @@ img {
     border: none;
 }
 
-a, a:visited, a:active, a:hover, a:focus {
+a, a:active, a:hover, a:focus {
     color: #0008ae;
+}
+
+a:visited {
+    color: #8781EC;
 }
 
 a, a:visited, a:active {
@@ -73,9 +77,9 @@ a.btn {
 
 .main {
     height: auto;
-    margin: 0 auto -60px;
+    margin: 0 auto;
     min-height: 100%;
-    padding: 0 0 60px;
+    padding: 0;
 }
 
 .content {
