--- a/css/style.css
+++ b/css/style.css
@@ -741,3 +741,9 @@ td.phisical-bordered {
 input[type="checkbox"] {
     margin: 0;
 }
+
+.img-responsive {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
