--- a/css/style.css
+++ b/css/style.css
@@ -763,3 +763,11 @@ input[type="checkbox"] {
 .no-underline:hover {
     text-decoration: none;
 }
+
+.font-green {
+    color: #3f903f;
+}
+
+.font-red {
+    color: #b52b27;
+}
