--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -236,19 +236,19 @@ table.dataTable thead .sorting_desc_disabled {
 table.dataTable thead .sorting_asc:after {
     content: "\f0de";
     float: right;
-    font-family: fontawesome;
+    font-family: fontawesome, sans-serif;
 }
 
 table.dataTable thead .sorting_desc:after {
     content: "\f0dd";
     float: right;
-    font-family: fontawesome;
+    font-family: fontawesome, sans-serif;
 }
 
 table.dataTable thead .sorting:after {
     content: "\f0dc";
     float: right;
-    font-family: fontawesome;
+    font-family: fontawesome, sans-serif;
     color: rgba(50, 50, 50, 0.5);
 }
 
