--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,8 @@ a.btn {
     text-decoration: none;
 }
 
-.btn {
+.btn,
+input.submit-blue {
     background-color: #337ab7;
     background-image: none;
     border: 1px solid #2e6da4;
@@ -55,7 +56,6 @@ a.btn {
     cursor: pointer;
     display: inline-block;
     font-weight: normal;
-    padding: 2px 10px;
     text-align: center;
     touch-action: manipulation;
     vertical-align: middle;
@@ -63,6 +63,10 @@ a.btn {
     -moz-user-select: none;
     -ms-touch-action: manipulation;
     -webkit-user-select: none;
+}
+
+.btn {
+    padding: 2px 10px;
 }
 
 .btn:hover, .btn:active {
