code review refactor

--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -4,8 +4,7 @@ body {
 
 .no-underline:active,
 .no-underline:focus,
-.no-underline:hover
-{
+.no-underline:hover {
     text-decoration: none;
 }
 
