championship season and playoff page

--- a/css/style.css
+++ b/css/style.css
@@ -457,6 +457,16 @@ input.submit-blue {
     width: 58%;
 }
 
+@media (min-width: 768px) {
+    .col-30-sm {
+        width: 30%;
+    }
+
+    .col-35-sm {
+        width: 35%;
+    }
+}
+
 .text-left {
     text-align: left;
 }
