--- a/css/style.css
+++ b/css/style.css
@@ -907,7 +907,7 @@ blockquote:before {
 }
 
 .message {
-    background-color: #c4c9f9;
+    background-color: #dcf2fa;
     padding: 5px;
     border-radius: 5px;
     width: auto;
