dialog and support lazy

--- a/css/style.css
+++ b/css/style.css
@@ -923,7 +923,7 @@ blockquote:before {
 }
 
 .message-scroll {
-    height: 100vh;
+    max-height: 100vh;
     overflow-x: hidden;
     overflow-y: auto;
 }
