--- a/css/style.css
+++ b/css/style.css
@@ -740,6 +740,10 @@ td.table-bordered-right {
     padding: 5px 0;
 }
 
+.table-bordered .border-bottom-blue {
+    border-bottom: 1px solid #286090;
+}
+
 ol, ul {
     margin: 0;
     padding-left: 20px;
