--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -4,6 +4,15 @@ html, body {
 
 html {
     background-color: #f5f5f5;
+    background-image: url('/img/background.jpg');
+    -moz-background-image: url('/img/background.jpg');
+    -o-background-image: url('/img/background.jpg');
+    -webkit-background-image: url('/img/background.jpg');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
+    -webkit-background-size: 100%;
 }
 
 html, body, table {
